Added basic working sql queries